# llm-robot-decision-maker

./: README.md
api/: .gitignore  README.md  makefile  pyproject.toml
api/runners/: map_generator.py
api/src/: main.py
api/src/app/: constants.py  objects.py
api/src/app/auto/: router.py  service.py
api/src/app/auto/schemas/: input.py  output.py
api/src/app/manual/: router.py  service.py
api/src/app/manual/schemas/: input.py  output.py
api/src/config/: __init__.py  config.py
api/src/prompts/: __init__.py  auto.py  runners.py
api/src/resources/: __init__.py  configuration.py  constants.py  objects.py
simulator/: README.md  index.html  main.js  style.css
simulator/maps/: map1.json  map10.json  map2.json  map3.json  map4.json  map5.json  map6.json  map7.json  map8.json  map9.json
