[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["nachoperezzv <ignacioperezzv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
python-dotenv = "^1.0.1"
langchain = "^0.2.7"
openai = "^1.35.13"
jinja2 = "^3.1.4"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
